@@ -1,5 +1,8 @@
 package com.java_template.application.processor;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.java_template.application.entity.hackernewsitem.version_1.HackerNewsItem;
 import com.java_template.application.store.InMemoryHnItemStore;
 import com.java_template.common.serializer.ProcessorSerializer;
@@ -23,6 +26,7 @@ public class SaveHnItemProcessor implements CyodaProcessor {
     private final String className = this.getClass().getSimpleName();
     private final ProcessorSerializer serializer;
     private final InMemoryHnItemStore store;
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     public SaveHnItemProcessor(SerializerFactory serializerFactory, InMemoryHnItemStore store) {
         this.serializer = serializerFactory.getDefaultProcessorSerializer();
@@ -36,7 +40,7 @@ public class SaveHnItemProcessor implements CyodaProcessor {
 
         return serializer.withRequest(request) //always use this method name to request EntityProcessorCalculationResponse
             .toEntity(HackerNewsItem.class)
-            .validate(this::isValidEntity, "Invalid HackerNewsItem: missing id or type")
+            .validate(this::isValidEntity, "Invalid HackerNewsItem: missing/invalid id or type")
             .map(this::processEntityLogic) // Implement business logic here
             .complete();
     }
@@ -48,29 +52,85 @@ public class SaveHnItemProcessor implements CyodaProcessor {
 
     private boolean isValidEntity(HackerNewsItem entity) {
         if (entity == null) return false;
-        Integer id = entity.getId();
+        String idStr = entity.getId();
         String type = entity.getType();
-        if (id == null) return false;
-        if (id < 0) return false;
-        if (type == null) return false;
-        if (type.trim().isEmpty()) return false;
+        if (idStr == null || idStr.isBlank()) return false;
+        // id SHOULD be an integer (no fractional part) and >= 0
+        try {
+            long id = Long.parseLong(idStr);
+            if (id < 0) return false;
+        } catch (NumberFormatException e) {
+            logger.debug("HackerNewsItem id is not a valid integer: {}", idStr);
+            return false;
+        }
+        if (type == null || type.isBlank()) return false;
         return true;
     }
 
     private HackerNewsItem processEntityLogic(ProcessorSerializer.ProcessorEntityExecutionContext<HackerNewsItem> context) {
         HackerNewsItem entity = context.entity();
-        // Add importTimestamp as ISO-8601 in UTC with seconds precision
-        String importTs = Instant.now().truncatedTo(ChronoUnit.SECONDS).toString();
+        if (entity == null) return null;
+
+        // Set importTimestamp in epoch millis on the entity (entity model stores epoch millis)
+        long importMillis = Instant.now().truncatedTo(ChronoUnit.SECONDS).toEpochMilli();
         try {
-            entity.setImportTimestamp(importTs);
+            entity.setImportTimestamp(importMillis);
         } catch (Exception e) {
-            // If the entity does not have setter, log and continue (should not happen in expected model)
             logger.warn("Failed to set importTimestamp on entity: {}", e.getMessage());
         }
 
+        // Enrich originalJson: preserve all original fields and add/update importTimestamp as ISO-8601 string
+        String orig = entity.getOriginalJson();
+        if (orig != null && !orig.isBlank()) {
+            try {
+                JsonNode root = objectMapper.readTree(orig);
+                if (root.isObject()) {
+                    ObjectNode obj = (ObjectNode) root;
+                    String isoTs = Instant.ofEpochMilli(importMillis).truncatedTo(ChronoUnit.SECONDS).toString();
+                    obj.put("importTimestamp", isoTs);
+                    String updated = objectMapper.writeValueAsString(obj);
+                    entity.setOriginalJson(updated);
+                } else {
+                    // If originalJson is not an object, create minimal object
+                    ObjectNode obj = objectMapper.createObjectNode();
+                    obj.put("id", entity.getId());
+                    obj.put("type", entity.getType() == null ? "" : entity.getType());
+                    obj.put("importTimestamp", Instant.ofEpochMilli(importMillis).truncatedTo(ChronoUnit.SECONDS).toString());
+                    entity.setOriginalJson(objectMapper.writeValueAsString(obj));
+                }
+            } catch (Exception e) {
+                logger.warn("Failed to parse/enrich originalJson, falling back to synthesized JSON: {}", e.getMessage());
+                try {
+                    ObjectNode obj = objectMapper.createObjectNode();
+                    obj.put("id", entity.getId());
+                    obj.put("type", entity.getType() == null ? "" : entity.getType());
+                    obj.put("importTimestamp", Instant.ofEpochMilli(importMillis).truncatedTo(ChronoUnit.SECONDS).toString());
+                    entity.setOriginalJson(objectMapper.writeValueAsString(obj));
+                } catch (Exception ex) {
+                    logger.error("Failed to synthesize originalJson: {}", ex.getMessage());
+                }
+            }
+        } else {
+            // No original JSON provided - synthesize a minimal JSON record with importTimestamp
+            try {
+                ObjectNode obj = objectMapper.createObjectNode();
+                obj.put("id", entity.getId());
+                obj.put("type", entity.getType() == null ? "" : entity.getType());
+                obj.put("importTimestamp", Instant.ofEpochMilli(importMillis).truncatedTo(ChronoUnit.SECONDS).toString());
+                entity.setOriginalJson(objectMapper.writeValueAsString(obj));
+            } catch (Exception e) {
+                logger.error("Failed to synthesize originalJson for entity id={}: {}", entity.getId(), e.getMessage());
+            }
+        }
+
         // Persist (upsert) the entity into the in-memory store
-        boolean created = store.upsert(entity);
-        logger.info("Saved HackerNewsItem id={} created={}", entity.getId(), created);
+        boolean created = false;
+        try {
+            created = store.upsert(entity);
+            logger.info("Saved HackerNewsItem id={} created={}", entity.getId(), created);
+        } catch (Exception e) {
+            logger.error("Failed to persist HackerNewsItem id={}: {}", entity.getId(), e.getMessage());
+        }
         return entity;
     }
 }
